base/bazarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
spec:
  ports:
  - port: 6767
    protocol: TCP
    targetPort: 6767
    name: webui
  selector:
    run: bazarr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: bazarr
  name: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      run: bazarr
  template:
    metadata:
      labels:
        run: bazarr
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - env:
        - name: TZ
          value: America/Denver
        - name: PUID
          value: "1000"
        - name: PGID
          value: "1000"
        image: linuxserver/bazarr
        name: bazarr
       livenessProbe:
         httpGet:
           path: /bazarr
           port: webui
         initialDelaySeconds: 200
         periodSeconds: 15
       readinessProbe:
         httpGet:
           path: /bazarr
           port: webui
         initialDelaySeconds: 200
         periodSeconds: 15
        ports:
        - containerPort: 6767
          name: webui
        volumeMounts: 
        - mountPath: /config 
          name: htpc-home
          subPath: bazarr
        - mountPath: /movies 
          name: htpc-home
          subPath: media/movies
        - mountPath: /tv
          name: htpc-home
          subPath: media/tv
