base/emby.yaml
apiVersion: v1
kind: Service
metadata:
  name: emby
spec:
  type: NodePort
  ports:
  - port: 8096
    protocol: TCP
    targetPort: 8096
    name: webui
    nodePort: 30002
  selector:
    run: emby
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: emby
  name: emby
spec:
  replicas: 1
  selector:
    matchLabels:
      run: emby
  template:
    metadata:
      labels:
        run: emby
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - env:
        - name: TZ
          value: Pacific/Auckland
        - name: UID
          value: "1000"
        - name: GID
          value: "1000"
        image: emby/embyserver
        name: emby
        ports:
        - containerPort: 8096
          name: webui
          protocol: TCP
        - containerPort: 8920
          name: webui-ssl
          protocol: TCP
        volumeMounts: 
        - mountPath: /config 
          name: htpc-home
          subPath: emby
        - mountPath: /tv 
          name: htpc-home
          subPath: media/tv  
        - mountPath: /movies 
          name: htpc-home
          subPath: media/movies
