base/kavita.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavita
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
    name: webui
  selector:
    run: kavita
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: kavita
  name: kavita
spec:
  replicas: 1
  selector:
    matchLabels:
      run: kavita
  template:
    metadata:
      labels:
        run: kavita
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - env:
        - name: TZ
          value: America/Denver
        - name: PUID
          value: "1000"
        - name: PGID
          value: "1000"
        image: kizaing/kavita
        name: kavita
        ports:
        - containerPort: 5000
          name: webui
        volumeMounts:
        - mountPath: /config
          name: htpc-home
          subPath: kavita
        - mountPath: /books
          name: htpc-home
          subPath: media/books
        - mountPath: /downloads
          name: htpc-home
          subPath: downloads
