base/prowlarr.yml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  ports:
  - port: 9696
    protocol: TCP
    targetPort: 9696
    name: webui
  selector:
    run: prowlarr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: prowlarr
  name: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      run: prowlarr
  template:
    metadata:
      labels:
        run: prowlarr
    spec:
      containers:
      - env:
        - name: TZ
          value: America/Denver
        - name: PUID
          value: "1000"
        - name: PGID
          value: "1000"
        image: linuxserver/prowlarr
        name: prowlarr
        ports:
        - containerPort: 9696
          name: webui
        volumeMounts:
        - mountPath: /config
          name: htpc-home
          subPath: prowlarr
