base/readarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr
spec:
  ports:
  - port: 8787
    protocol: TCP
    targetPort: 8787
    name: webui
  selector:
    run: readarr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: readarr
  name: readarr
spec:
  replicas: 1
  selector:
    matchLabels:
      run: readarr
  template:
    metadata:
      labels:
        run: readarr
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - env:
        - name: TZ
          value: America/Denver
        - name: PUID
          value: "1000"
        - name: PGID
          value: "1000"
        image: linuxserver/readarr
        name: readarr
        ports:
        - containerPort: 8787
          name: webui
          livenessProbe:
            exec:
              command:
              - /bin/sh
              - -c
              - curl "http://localhost:8787/readarr/api/health?ApiKey=$(sed -ne '/ApiKey/{s/.*<ApiKey>\(.*\)<\/ApiKey>.*/\1/p;q;}' </config/config.xml)"
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
              - /bin/sh
              - -c
              - curl "http://localhost:8787/readarr/api/system/status?ApiKey=$(sed -ne '/ApiKey/{s/.*<ApiKey>\(.*\)<\/ApiKey>.*/\1/p;q;}' </config/config.xml)"
            initialDelaySeconds: 30
            periodSeconds: 10
        volumeMounts:
        - mountPath: /config
          name: htpc-home
          subPath: readarr
        - mountPath: /books
          name: htpc-home
          subPath: media/books
        - mountPath: /downloads
          name: htpc-home
          subPath: downloads
