base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: htpc
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/protocol: http
    ingress.kubernetes.io/ssl-redirect: false
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex
            port:
              name: webui
      - path: /sonarr
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              name: webui
      - path: /radarr
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              name: webui
      - path: /bazarr
        pathType: Prefix
        backend:
          service:
            name: bazarr
            port:
              name: webui
      - path: /transmission
        pathType: Prefix
        backend:
          service:
            name: transmission
            port:
              name: webui
      - path: /prowlarr
        pathType: Prefix
        backend:
          service:
            name: prowlarr
            port:
              name: webui
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: traefik.io/ingress-controller
---
